--- a/HW4_ty1045/Assignment1_ty1045.ipynb
+++ b/HW4_ty1045/Assignment1_ty1045.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "# PUI2018 - Homework 4 - Gabriel Yin - ty1045 \n",
+    "# PUI2018 - Homework 4 - Gabriel Yin - ty1045 - N10088627 \n",
     "author = '__Gabriel__'\n",
     "contact = '__gabrielyin@berkeley.edu__'\n",
     "import pandas as pd \n",
