--- a/HW5_ty1045/sql_query_ty1045.ipynb
+++ b/HW5_ty1045/sql_query_ty1045.ipynb
@@ -10415,10 +10415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Extra Credit: Don't have time to do the python2 and python3 things"
+   ]
   },
   {
    "cell_type": "code",
