--- a/HW5_ty1045/sql_query_ty1045.ipynb
+++ b/HW5_ty1045/sql_query_ty1045.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "[46200 rows x 19 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2173,7 +2173,7 @@
        "9      1983.0       1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2532,7 @@
        "9      1979.0       1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2881,7 +2881,7 @@
        "9        1980       1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2906,7 +2906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3237,7 +3237,7 @@
        "9        1968       1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3641,7 +3641,7 @@
        "[327 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3658,7 +3658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3692,7 +3692,7 @@
        "0     46200    675.865823         43016            60"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3722,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5484,7 +5484,7 @@
        "[1459 rows x 19 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5501,7 +5501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -7263,7 +7263,7 @@
        "[13231 rows x 19 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7280,7 +7280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7310,7 +7310,7 @@
        "0    662.942181         NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7326,7 +7326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -9088,7 +9088,7 @@
        "[32969 rows x 19 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9104,7 +9104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -9134,7 +9134,7 @@
        "0  681.052292         NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9163,7 +9163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -9618,7 +9618,7 @@
        "[327 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9648,58 +9648,58 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>count</th>\n",
-       "      <th>Unnamed: 1</th>\n",
+       "      <th>start_station_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>213</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Broadway &amp; W 49 St</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>251</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Broadway &amp; W 41 St</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>507</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>W 41 St &amp; 8 Ave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>141</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>W 45 St &amp; 6 Ave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>112</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>W 43 St &amp; 6 Ave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>221</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>W 42 St &amp; 8 Ave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>141</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>W 45 St &amp; 8 Ave</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count  Unnamed: 1\n",
-       "0    213         NaN\n",
-       "1    251         NaN\n",
-       "2    507         NaN\n",
-       "3    141         NaN\n",
-       "4    112         NaN\n",
-       "5    221         NaN\n",
-       "6    141         NaN"
+       "   count  start_station_name\n",
+       "0    213  Broadway & W 49 St\n",
+       "1    251  Broadway & W 41 St\n",
+       "2    507     W 41 St & 8 Ave\n",
+       "3    141     W 45 St & 6 Ave\n",
+       "4    112     W 43 St & 6 Ave\n",
+       "5    221     W 42 St & 8 Ave\n",
+       "6    141     W 45 St & 8 Ave"
       ]
      },
      "execution_count": 19,
@@ -9710,10 +9710,12 @@
    "source": [
     "# number of trips started per station within 500m of time square \n",
     "task3_2 = '''\n",
-    "select count(start_station_id) from citibike\n",
+    "select count(start_station_id),\n",
+    "start_station_name as start_station_name\n",
+    "from citibike\n",
     "where st_dwithin(\n",
     "CDB_LatLng(start_station_latitude, start_station_longitude)::geography, CDB_LatLng(40.7577, -73.9857)::geography, 500)\n",
-    "GROUP BY start_station_id\n",
+    "GROUP BY start_station_id, start_station_name\n",
     "'''\n",
     "\n",
     "pd.read_csv(StringIO.StringIO(queryCartoDB(task3_2)), sep=',')"
