--- a/HW5_ty1045/sql_query_ty1045.ipynb
+++ b/HW5_ty1045/sql_query_ty1045.ipynb
@@ -9816,8 +9816,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Therefore, the start station with the longest average trip duration is Broadway & W 49 St with 1010.104167"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -10397,7 +10404,7 @@
        "[572 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
