--- a/HW6_ty1045/Assignment3_ty1045.ipynb
+++ b/HW6_ty1045/Assignment3_ty1045.ipynb
@@ -509,6 +509,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "Since the p value of 0.00 is smaller than the critical value of 0.05, we can reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -609,6 +617,14 @@
     "\n",
     "    \n",
     "report_result(p_3y, alpha)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "Since the p value of 0.2 is not smaller than the critical value of 0.2, we cannot reject the null hypothesis."
    ]
   },
   {
