--- a/HW6_ty1045/Assignment3_ty1045.ipynb
+++ b/HW6_ty1045/Assignment3_ty1045.ipynb
@@ -528,7 +528,7 @@
     "\n",
     " ### Null hypothesis: \n",
     " \n",
-    " #### Ratio of former prisoners convicted of a felony after release in the group of candidates who participated in program is the same or lower than candidates who did not participated in the program as control group, significance level p=0.05\n",
+    " ### Ratio of former prisoners convicted of a felony after release in the group of candidates who participated in program is the same or larger than candidates who did not participated in the program as control group, significance level p=0.05\n",
     " \n",
     " #### $H_0: P_1 - P_0 \\geq$ 0\n",
     " #### $H_1: P_1 - P_0 < 0$\n",
