--- a/HW6_ty1045/Assignment4_ty1045.ipynb
+++ b/HW6_ty1045/Assignment4_ty1045.ipynb
@@ -2058,6 +2058,517 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extra Credit: Age of bikers for trips originating in Manhattan and in Brooklyn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Null Hypothesis: there are no statistical differences in the distribution of age of bikers for trips originating in Manhattan and Brooklyn\n",
+    "\n",
+    "### $$ \\alpha = 0.05 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will still make use of the previous data from 2015.7 and 2015.8\n",
+    "# Use the max & min coordinates of Manhattan and Brooklyn to obtain borough\n",
+    "# get this idea online by searching in stack overflow\n",
+    "B_MIN_LONG = -74.0418978864012\n",
+    "B_MIN_LAT = 40.5695382235533\n",
+    "B_MAX_LONG = -73.8335606267475\n",
+    "B_MAX_LAT = 40.7391362164936\n",
+    "    \n",
+    "M_MIN_LONG = -74.0477310881111\n",
+    "M_MIN_LAT = 40.68292519539\n",
+    "M_MAX_LONG = -73.9066524219675\n",
+    "M_MAX_LAT = 40.8790463395808"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_area(row):\n",
+    "    \n",
+    "    if (B_MIN_LAT <= row['start station latitude'] <= B_MAX_LAT) \\\n",
+    "    &(B_MIN_LONG <= row['start station longitude'] <= B_MAX_LONG):\n",
+    "        return 'Brooklyn'\n",
+    "    \n",
+    "    elif (M_MIN_LAT <= row['start station latitude'] <= M_MAX_LAT)\\\n",
+    "    &(M_MIN_LONG <= row['start station longitude'] <= M_MAX_LONG):\n",
+    "        return 'Manhattan'\n",
+    "    \n",
+    "    return 'Other'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_data['area'] = bike_data.apply(get_area, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>stoptime</th>\n",
+       "      <th>start station id</th>\n",
+       "      <th>start station name</th>\n",
+       "      <th>start station latitude</th>\n",
+       "      <th>start station longitude</th>\n",
+       "      <th>end station id</th>\n",
+       "      <th>end station name</th>\n",
+       "      <th>end station latitude</th>\n",
+       "      <th>end station longitude</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>birth year</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>date</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>732</td>\n",
+       "      <td>7/1/2015 00:00:03</td>\n",
+       "      <td>7/1/2015 00:12:16</td>\n",
+       "      <td>489</td>\n",
+       "      <td>10 Ave &amp; W 28 St</td>\n",
+       "      <td>40.750664</td>\n",
+       "      <td>-74.001768</td>\n",
+       "      <td>368</td>\n",
+       "      <td>Carmine St &amp; 6 Ave</td>\n",
+       "      <td>40.730386</td>\n",
+       "      <td>-74.002150</td>\n",
+       "      <td>18669</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1970.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:00:03</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>322</td>\n",
+       "      <td>7/1/2015 00:00:06</td>\n",
+       "      <td>7/1/2015 00:05:29</td>\n",
+       "      <td>304</td>\n",
+       "      <td>Broadway &amp; Battery Pl</td>\n",
+       "      <td>40.704633</td>\n",
+       "      <td>-74.013617</td>\n",
+       "      <td>3002</td>\n",
+       "      <td>South End Ave &amp; Liberty St</td>\n",
+       "      <td>40.711512</td>\n",
+       "      <td>-74.015756</td>\n",
+       "      <td>14618</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:00:06</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>790</td>\n",
+       "      <td>7/1/2015 00:00:17</td>\n",
+       "      <td>7/1/2015 00:13:28</td>\n",
+       "      <td>447</td>\n",
+       "      <td>8 Ave &amp; W 52 St</td>\n",
+       "      <td>40.763707</td>\n",
+       "      <td>-73.985162</td>\n",
+       "      <td>358</td>\n",
+       "      <td>Christopher St &amp; Greenwich St</td>\n",
+       "      <td>40.732916</td>\n",
+       "      <td>-74.007114</td>\n",
+       "      <td>18801</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:00:17</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1228</td>\n",
+       "      <td>7/1/2015 00:00:23</td>\n",
+       "      <td>7/1/2015 00:20:51</td>\n",
+       "      <td>490</td>\n",
+       "      <td>8 Ave &amp; W 33 St</td>\n",
+       "      <td>40.751551</td>\n",
+       "      <td>-73.993934</td>\n",
+       "      <td>250</td>\n",
+       "      <td>Lafayette St &amp; Jersey St</td>\n",
+       "      <td>40.724561</td>\n",
+       "      <td>-73.995653</td>\n",
+       "      <td>19137</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1990.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:00:23</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1383</td>\n",
+       "      <td>7/1/2015 00:00:44</td>\n",
+       "      <td>7/1/2015 00:23:48</td>\n",
+       "      <td>327</td>\n",
+       "      <td>Vesey Pl &amp; River Terrace</td>\n",
+       "      <td>40.715338</td>\n",
+       "      <td>-74.016584</td>\n",
+       "      <td>72</td>\n",
+       "      <td>W 52 St &amp; 11 Ave</td>\n",
+       "      <td>40.767272</td>\n",
+       "      <td>-73.993929</td>\n",
+       "      <td>15808</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1988.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:00:44</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>603</td>\n",
+       "      <td>7/1/2015 00:01:00</td>\n",
+       "      <td>7/1/2015 00:11:04</td>\n",
+       "      <td>455</td>\n",
+       "      <td>1 Ave &amp; E 44 St</td>\n",
+       "      <td>40.750020</td>\n",
+       "      <td>-73.969053</td>\n",
+       "      <td>367</td>\n",
+       "      <td>E 53 St &amp; Lexington Ave</td>\n",
+       "      <td>40.758281</td>\n",
+       "      <td>-73.970694</td>\n",
+       "      <td>17069</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1953.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:01:00</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>520</td>\n",
+       "      <td>7/1/2015 00:01:03</td>\n",
+       "      <td>7/1/2015 00:09:43</td>\n",
+       "      <td>458</td>\n",
+       "      <td>11 Ave &amp; W 27 St</td>\n",
+       "      <td>40.751396</td>\n",
+       "      <td>-74.005226</td>\n",
+       "      <td>116</td>\n",
+       "      <td>W 17 St &amp; 8 Ave</td>\n",
+       "      <td>40.741776</td>\n",
+       "      <td>-74.001497</td>\n",
+       "      <td>17043</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1986.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:01:03</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>289</td>\n",
+       "      <td>7/1/2015 00:01:06</td>\n",
+       "      <td>7/1/2015 00:05:55</td>\n",
+       "      <td>312</td>\n",
+       "      <td>Allen St &amp; E Houston St</td>\n",
+       "      <td>40.722055</td>\n",
+       "      <td>-73.989111</td>\n",
+       "      <td>236</td>\n",
+       "      <td>St Marks Pl &amp; 2 Ave</td>\n",
+       "      <td>40.728419</td>\n",
+       "      <td>-73.987140</td>\n",
+       "      <td>14967</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1970.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-07-01 00:01:06</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1771</td>\n",
+       "      <td>7/1/2015 00:01:25</td>\n",
+       "      <td>7/1/2015 00:30:57</td>\n",
+       "      <td>405</td>\n",
+       "      <td>Washington St &amp; Gansevoort St</td>\n",
+       "      <td>40.739323</td>\n",
+       "      <td>-74.008119</td>\n",
+       "      <td>405</td>\n",
+       "      <td>Washington St &amp; Gansevoort St</td>\n",
+       "      <td>40.739323</td>\n",
+       "      <td>-74.008119</td>\n",
+       "      <td>20171</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015-07-01 00:01:25</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>813</td>\n",
+       "      <td>7/1/2015 00:01:41</td>\n",
+       "      <td>7/1/2015 00:15:15</td>\n",
+       "      <td>358</td>\n",
+       "      <td>Christopher St &amp; Greenwich St</td>\n",
+       "      <td>40.732916</td>\n",
+       "      <td>-74.007114</td>\n",
+       "      <td>417</td>\n",
+       "      <td>Barclay St &amp; Church St</td>\n",
+       "      <td>40.712912</td>\n",
+       "      <td>-74.010202</td>\n",
+       "      <td>19265</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1980.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-07-01 00:01:41</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tripduration          starttime           stoptime  start station id  \\\n",
+       "0           732  7/1/2015 00:00:03  7/1/2015 00:12:16               489   \n",
+       "1           322  7/1/2015 00:00:06  7/1/2015 00:05:29               304   \n",
+       "2           790  7/1/2015 00:00:17  7/1/2015 00:13:28               447   \n",
+       "3          1228  7/1/2015 00:00:23  7/1/2015 00:20:51               490   \n",
+       "4          1383  7/1/2015 00:00:44  7/1/2015 00:23:48               327   \n",
+       "5           603  7/1/2015 00:01:00  7/1/2015 00:11:04               455   \n",
+       "6           520  7/1/2015 00:01:03  7/1/2015 00:09:43               458   \n",
+       "7           289  7/1/2015 00:01:06  7/1/2015 00:05:55               312   \n",
+       "8          1771  7/1/2015 00:01:25  7/1/2015 00:30:57               405   \n",
+       "9           813  7/1/2015 00:01:41  7/1/2015 00:15:15               358   \n",
+       "\n",
+       "              start station name  start station latitude  \\\n",
+       "0               10 Ave & W 28 St               40.750664   \n",
+       "1          Broadway & Battery Pl               40.704633   \n",
+       "2                8 Ave & W 52 St               40.763707   \n",
+       "3                8 Ave & W 33 St               40.751551   \n",
+       "4       Vesey Pl & River Terrace               40.715338   \n",
+       "5                1 Ave & E 44 St               40.750020   \n",
+       "6               11 Ave & W 27 St               40.751396   \n",
+       "7        Allen St & E Houston St               40.722055   \n",
+       "8  Washington St & Gansevoort St               40.739323   \n",
+       "9  Christopher St & Greenwich St               40.732916   \n",
+       "\n",
+       "   start station longitude  end station id               end station name  \\\n",
+       "0               -74.001768             368             Carmine St & 6 Ave   \n",
+       "1               -74.013617            3002     South End Ave & Liberty St   \n",
+       "2               -73.985162             358  Christopher St & Greenwich St   \n",
+       "3               -73.993934             250       Lafayette St & Jersey St   \n",
+       "4               -74.016584              72               W 52 St & 11 Ave   \n",
+       "5               -73.969053             367        E 53 St & Lexington Ave   \n",
+       "6               -74.005226             116                W 17 St & 8 Ave   \n",
+       "7               -73.989111             236            St Marks Pl & 2 Ave   \n",
+       "8               -74.008119             405  Washington St & Gansevoort St   \n",
+       "9               -74.007114             417         Barclay St & Church St   \n",
+       "\n",
+       "   end station latitude  end station longitude  bikeid    usertype  \\\n",
+       "0             40.730386             -74.002150   18669  Subscriber   \n",
+       "1             40.711512             -74.015756   14618  Subscriber   \n",
+       "2             40.732916             -74.007114   18801  Subscriber   \n",
+       "3             40.724561             -73.995653   19137  Subscriber   \n",
+       "4             40.767272             -73.993929   15808  Subscriber   \n",
+       "5             40.758281             -73.970694   17069  Subscriber   \n",
+       "6             40.741776             -74.001497   17043  Subscriber   \n",
+       "7             40.728419             -73.987140   14967  Subscriber   \n",
+       "8             40.739323             -74.008119   20171    Customer   \n",
+       "9             40.712912             -74.010202   19265  Subscriber   \n",
+       "\n",
+       "   birth year  gender                date       area  \n",
+       "0      1970.0       1 2015-07-01 00:00:03  Manhattan  \n",
+       "1      1984.0       1 2015-07-01 00:00:06   Brooklyn  \n",
+       "2      1992.0       1 2015-07-01 00:00:17  Manhattan  \n",
+       "3      1990.0       1 2015-07-01 00:00:23  Manhattan  \n",
+       "4      1988.0       1 2015-07-01 00:00:44   Brooklyn  \n",
+       "5      1953.0       1 2015-07-01 00:01:00  Manhattan  \n",
+       "6      1986.0       1 2015-07-01 00:01:03  Manhattan  \n",
+       "7      1970.0       1 2015-07-01 00:01:06   Brooklyn  \n",
+       "8         NaN       0 2015-07-01 00:01:25  Manhattan  \n",
+       "9      1980.0       2 2015-07-01 00:01:41   Brooklyn  "
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_data['age'] = 2015 - bike_data['birth year']\n",
+    "# MA\n",
+    "MA = bike_data[bike_data['area']=='Manhattan'].age.dropna()\n",
+    "#BK\n",
+    "BK = bike_data[bike_data['area']=='Brooklyn'].age.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KS Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ks_2sampResult(statistic=0.05533556510390342, pvalue=0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ks = scipy.stats.ks_2samp(BK, MA)\n",
+    "print(ks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion: As we can see from pvalue of 0.0 < 0.05, we can reject the null hypothesis and conclude that there are statistical differences in the distribution of age of bikers for trips originating in Manhattan and Brooklyn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pearson Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hypothesis: there are no correlation between the Brooklyn rider age and Manhattan rider age."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.9962586015384337, 0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "aM = np.sort(np.random.choice(MA, size=min(len(MA), len(BK))))\n",
+    "aF = np.sort(np.random.choice(BK, size=min(len(MA), len(BK))))\n",
+    "pearson = scipy.stats.pearsonr(aM,aF)\n",
+    "print(pearson)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion: As we can see from pvalue of 0.0 < 0.05, we can reject the null hypothesis and conclude that there are some correlations between the two. As pearson coefficient is 0.9962, there is a strong positive correlation between the two."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spearman Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hypothesis: there are no correlation between the Brooklyn rider age and Manhattan rider age."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman’s correlation coefficient is 0.999292, the 2-tailed p-value is 0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "spearman = scipy.stats.spearmanr(aM, aF)\n",
+    "print('Spearman’s correlation coefficient is %f, \\\n",
+    "the 2-tailed p-value is %f' % (spearman[0], spearman[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion: As we can see from pvalue of 0.0 < 0.05, we can reject the null hypothesis and conclude that there are some correlations between the two.. As pearson coefficient is 0.9992, there is a strong positive correlation between the two."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
