hw10 done with ec2

--- a/HW10_ty1045/Assignment2.ipynb
+++ b/HW10_ty1045/Assignment2.ipynb
@@ -110,6 +110,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "WARNING: DO NOT COPY!!! YOU WON'T LEARN ANYTHING FROM IT!!! YOU WILL BE KICKED OUT OF SCHOOL!!\n",
+    "'''\n",
+    "author = '__gabriel__ty1045__'\n",
+    "contact = '__gabrielyin@berkeley.edu__'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -225,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv MNMapPLUTO"
+    "!mv MNMapPLUTO.* PUIdata "
    ]
   },
   {
