hw11 part2 bug fix

--- a/HW11_ty1045/MTA_ty1045.ipynb
+++ b/HW11_ty1045/MTA_ty1045.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,12 +318,27 @@
     "        swipe_per_station_per_type = []\n",
     "        for i in range(0, len(mta_rides)):\n",
     "            swipe_per_station_per_type.append(mta_rides[i][type_num][week_num])\n",
-    "        return swipe_per_station_per_type"
+    "        return swipe_per_station_per_type\n",
+    "    # non smoothed \n",
+    "    def get_series_stats_non_smooth(self, i):\n",
+    "        print('-' * 20 )\n",
+    "        print('Series number %d' % (i))\n",
+    "        print('std: %f' % (np.array(rides[i]).std()))\n",
+    "        print('fractional change over time: %f' % (rides[i][193] / rides[i][0]))\n",
+    "        return rides[i][193] / rides[i][0]\n",
+    "    # smoothed \n",
+    "    def get_series_stats_smooth(self, i):\n",
+    "        rm = mta_rides_df.loc[i].rolling(1).mean()\n",
+    "        print('-' * 20 )\n",
+    "        print('Series number %d' % (i))\n",
+    "        print('std: %f' % (rm.std()))\n",
+    "        print('fractional change over time: %f' % (rm[193] / rm[0]))\n",
+    "        return rm[193] / rm[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 319,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-29T19:20:41.401337Z",
@@ -441,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -733,38 +748,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:7: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  import sys\n",
-      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  \n"
+      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:64: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:65: RuntimeWarning: divide by zero encountered in double_scalars\n"
      ]
     }
    ],
    "source": [
     "# get series stats for each series \n",
     "# non smoothed \n",
-    "def get_series_stats_non_smooth(i):\n",
-    "    print('-' * 20 )\n",
-    "    print('Series number %d' % (i))\n",
-    "    print('std: %f' % (np.array(rides[i]).std()))\n",
-    "    print('fractional change over time: %f' % (rides[i][193] / rides[i][0]))\n",
-    "    return rides[i][193] / rides[i][0]\n",
-    "# smoothed \n",
-    "def get_series_stats_smooth(i):\n",
-    "    rm = mta_rides_df.loc[i].rolling(1).mean()\n",
-    "    print('-' * 20 )\n",
-    "    print('Series number %d' % (i))\n",
-    "    print('std: %f' % (rm.std()))\n",
-    "    print('fractional change over time: %f' % (rm[193] / rm[0]))\n",
-    "    return rm[193] / rm[0]\n",
-    "# loop through series \n",
     "for i in range(0, len(rides)):\n",
-    "    get_series_stats_non_smooth(i)"
+    "    mta.get_series_stats_non_smooth(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -963,10 +961,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  from ipykernel import kernelapp as app\n",
-      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:16: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  app.launch_new_instance()\n"
+      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:72: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/nfshome/ty1045/.conda/envs/geo/lib/python3.6/site-packages/ipykernel_launcher.py:73: RuntimeWarning: divide by zero encountered in double_scalars\n"
      ]
     }
    ],
@@ -974,9 +970,9 @@
     "# smooth rolling mean \n",
     "fraction, f = {}, []\n",
     "for i in range(0, len(rides)):\n",
-    "    f.append(get_series_stats_smooth(i))\n",
-    "    fraction[get_series_stats_smooth(i)] = i \n",
-    "\n",
+    "    f.append(mta.get_series_stats_smooth(i))\n",
+    "    fraction[mta.get_series_stats_smooth(i)] = i \n",
+    "# print results\n",
     "print(\"steepest increase: \", fraction[max(np.array(f))])\n",
     "print(\"steepest decrease: \", fraction[min(np.array(f))])"
    ]
@@ -990,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +995,7 @@
        "Text(0.5, 1.0, 'Week vs. swipes of 22th type with steepest increase')"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1026,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1031,7 @@
        "Text(0.5, 1.0, 'Week vs. swipes of 7th type with steepest decrease')"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     },
