hw11 with comments

--- a/HW11_ty1045/MTA_ty1045.ipynb
+++ b/HW11_ty1045/MTA_ty1045.ipynb
@@ -213,6 +213,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThere you are my friend...I saw you coming...muhahahhahahahaha...\\n'"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "author = '__gabriel__ty1045'\n",
+    "contact = 'gabrielyin@berkeley.edu'\n",
+    "'''\n",
+    "There you are my friend...I saw you coming...muhahahhahahahaha...\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
